changed 'flashcards' to 'decks', fixed overflow bug

--- a/assets/flashcard/style.css
+++ b/assets/flashcard/style.css
@@ -1,7 +1,3 @@
-html{
-    overflow: hidden;
-}
-
 #action-list.desktop{
     display: flex;
 }
